2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (frame-restartable-p): New function.
	(swank-frame): Deleted. Update implemenetations accordingly.
	(print-frame): Renamed back from print-swank-frame.

	* swank.lisp (backends): Don't clutter the backtrace with
	'(:restartable :unknown).  For practical purposes :unknown is the
	same as nil.

	* slime.el (sldb-compute-frame-face): Only accept nil or t for
	the :restartable prop.

2008-10-16  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-file): Return the same
	values as COMPILE-FILE.  Update backends accordingly.

	* swank-lispworks.lisp (with-swank-compilation-unit): Return the
	values of BODY.
	(compile-from-temp-file)
	* swank-allegro.lisp (compile-from-temp-file)
	* swank-clisp.lisp (swank-compile-string)
	* swank-abcl.lisp (swank-compile-string): Return T on success.
	* swank.lisp (collect-notes): Check return type of
	FUNCTION.

2008-10-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (frame-catch-tags): Disabled as it prevents
	FRAME-LOCALS from working in lx8632.

2008-10-10  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-inspector-toggle-verbose): New function.
	(slime-inspector-mode-map): Bind v to slime-inspector-toggle-verbose.
	(slime-cheat-sheet-table): Add slime-inspector-toggle-verbose.
	* swank.lisp (*inspector-verbose*): New variable.
	([defstruct] istate): New slot called verbose.
	(istate>elisp): If the current istate is verbose, use untruncated result of
	TO-STRING as the title.
	(inspect-nth-part): Use the verbosity of the current istate.
	* doc/slime.texi: Document slime-inspector-toggle-verbose.

2008-10-07  Nikodemus Siivola <nikodemus@random-state.net>

	* swank.lisp (*backtrace-printer-bindings*): export.

2008-10-05  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (list-callers): Do a full GC before calling
	map-allocated-objects. That's needed because map-allocated-objects